--- a/src/styles.css
+++ b/src/styles.css
@@ -26,8 +26,8 @@
 
 .headerBig {
 	fontFamily: BananaFontBlackItal;
-	font-size: 110px;
-	color: white;
+	font-size: 60;
+	color: #0096FF;
 	text-align: center;		
 }
 
