--- a/src/GalapagoshaTestScr.mxml
+++ b/src/GalapagoshaTestScr.mxml
@@ -21,6 +21,7 @@
 		<s:State name="recipe"/>
 		<s:State name="ninja"/>
 		<s:State name="weight"/>
+		<s:State name="terms"/>
 	</s:states>
 	<fx:Script>
 		<![CDATA[
@@ -196,7 +197,7 @@
 			
 			protected function bananaTermsBtn_clickHandler(event:MouseEvent):void
 			{
-				currentState = "recipe";
+				currentState = "terms";
 			}
 			
 			protected function button1_clickHandler(event:MouseEvent):void
@@ -407,29 +408,33 @@
 		</s:Transition-->
 	</fx:Declarations>
 	<s:Group width="1080" height="1920">
-		<s:Image id="background" includeIn="greeting,beckon,menu" width="1080" horizontalCenter="0" smooth="true"
+		<s:Image id="background" includeIn="beckon,greeting,menu,terms" width="1080" horizontalCenter="0" smooth="true"
 				 source="@Embed('../assets/background.png')" verticalCenter="200"
 				 />
-		<ns1:Clouds2 id="clouds" includeIn="greeting,beckon,menu" width="1100" 
-					 width.menu="1080" horizontalCenter = "0" verticalCenter ="-220"/>
-		<s:Scroller includeIn="greeting,beckon,menu" width="1080"
+		<ns1:Clouds2 id="clouds" includeIn="beckon,greeting,menu,terms" width="1100"
+					 horizontalCenter="0" verticalCenter="-220"
+					 width.menu="1080"
+					 width.terms="1080"/>
+		<s:Scroller includeIn="beckon,greeting,menu,terms" width="1080"
 					height="1920">
 			<s:Group left="0" right="0" top="0" bottom="0">
-				<ns1:VideoPlace id="beckonVideo" horizontalCenter="0" rotation="90" verticalCenter="-100"
-								height.greeting="1080" 
-								height.menu="1080" />
+				<ns1:VideoPlace id="beckonVideo" horizontalCenter="0" rotation="90"
+								verticalCenter="-100"
+								height.greeting="1080"
+								height.menu="1080"
+								height.terms="1080"/>
 				<ns1:TouchIT id="clickMe" includeIn="greeting" horizontalCenter="0"
 							 verticalCenter="660"/>				
-				<s:Label includeIn="beckon" y="1500" width="1000" height="300" fontSize="60"
-						 horizontalCenter="0" styleName="headerBig"
+				<s:Label includeIn="beckon" y="1500" width="1000" height="300" color="#FFFFFF"
+						 fontSize="60" horizontalCenter="0" styleName="headerBig"
 						 text="Прикоснись &#xd;и выиграй путешествие&#xd;в Эквадор!"/>
 			</s:Group>
 		</s:Scroller>
-		<s:Group includeIn="menu" left="0" right="0" top="0" bottom="0">
+		<s:Group includeIn="menu,terms" left="0" right="0" top="0" bottom="0">
 	
 			<s:Group id="bananaWeightBtn" width="250" height="366"
 					 click="bananaWeightBtn_clickHandler(event)" horizontalCenter="-374"
-					 verticalCenter="550">
+					 verticalCenter="500">
 				<s:TextArea y="248" width="400" height="120" borderVisible="false"
 							contentBackgroundAlpha="0.0" editable="false" horizontalCenter="0"
 							mouseEnabled="false" selectable="false" styleName="menu"
@@ -457,8 +462,8 @@
 						 source="@Embed('../assets/recipesBtn.png')"/>
 			</s:Group>
 			<s:Group id="bananaNinja" width="250" height="356"
-					 click="bananaNinjaBtn_clickHandler(event)" horizontalCenter="375"
-					 verticalCenter="550">
+					 click="bananaNinjaBtn_clickHandler(event)" fontSize="50" horizontalCenter="375"
+					 verticalCenter="500">
 				<s:TextArea y="253" width="250" height="120" borderVisible="false"
 							contentBackgroundAlpha="0.0" editable="false" horizontalCenter="0"
 							mouseEnabled="false" selectable="false" styleName="menu"
@@ -467,9 +472,26 @@
 						 source="@Embed('../assets/ninjaBtn.png')"/>
 			</s:Group>
 			<s:Group width="500" height="100" horizontalCenter="0" verticalCenter="850" click="bananaTermsBtn_clickHandler(event)">			
-			<s:Label horizontalCenter="0" styleName="headerSmall" text="Условия акции"
+			<s:Label horizontalCenter="0" styleName="headerSmall" text="Правила акции"
 					 textDecoration="underline" verticalCenter="0"/>
 			</s:Group>
+			<s:BorderContainer includeIn="terms" x="0" y="0" width="1080" height="1920"
+							   backgroundAlpha="0.9" borderVisible="false">
+				<s:Label y="250" width="1000" height="153" color="#0096FF" fontSize="60"
+						 horizontalCenter="0" styleName="headerBig"
+						 text="Промо-акция&#xd;Продли свое лето!"/>
+				<s:Label y="480" width="800" height="1150" chromeColor="#000000" color="#000000"
+						 fontFamily="BananaFontItal" fontSize="30" horizontalCenter="0"
+						 lineHeight="40"
+						 text="Этим летом у тебя есть уникальная возможность выиграть поездку в Эквадор на двоих. Для этого участвуй в акции &quot;Продли свое лето&quot; с 01 июня 2013 года по 21 сентября 2013.&#xd;&#xd;Для участия в акции необходимо купить связку бананов, сохранить чек, подтверждающий покупку и сделать фото на фоне брендированного интерактивного стенда &quot;Супер Банан&quot;.&#xd;&#xd;Заполни специальную форму на сайте banana-ecuador.ru или бананыизэквадора.рф, где укажи: ФИО, паспортные данные, контактную информацию, зарегистрируй номер чека и, главное, прикрепи фото на фоне стенда «Супер Банан». Увеличивай свой шанс на победу, покупай бананы из Эквадора и регистрируй максимальное количество чеков!&#xd;&#xd;Победитель акции будет определен 22 сентября 2013 года методом случайной выборки. Победителю сообщается о выигрыше по указанному им контактному телефону. Потеря участником акции товарного чека лишает участника права на получение приза.&#xd;&#xd;Имена и фамилии победителей будут опубликованы на сайте banana-ecuador.ru и бананыизэквадора.рф."
+						 textAlign="center"/>
+				<s:Group top="0" width="1080" height="1920"
+						 click="button1_clickHandler(event)" horizontalCenter="0">			
+					<s:Label bottom="200" width="552" color="#068700" horizontalCenter="0"
+							 styleName="headerSmall" text="закрыть" textDecoration="underline"/>
+				</s:Group>
+				
+			</s:BorderContainer>
 		</s:Group>
 	
 		<ns1:NinjaScreen includeIn="ninja" left="0" top="0" bottom="0" right="0" />
