--- a/src/Ecuador.mxml
+++ b/src/Ecuador.mxml
@@ -3,8 +3,9 @@
 		 xmlns:s="library://ns.adobe.com/flex/spark"
 		 xmlns:mx="library://ns.adobe.com/flex/mx"
 		 xmlns:ns1="*"
-		 width="1080" height="1920"
-		 styleName.ecuador_start="headerMed" stateChangeComplete="group1_stateChangeCompleteHandler(event)" addedToStage="group1_addedToStageHandler(event)">
+		 width="1080" height="1920" addedToStage="group1_addedToStageHandler(event)"
+		 stateChangeComplete="group1_stateChangeCompleteHandler(event)"
+		 styleName.ecuador_start="headerMed">
 	<fx:Style source="styles.css"/>
 	<fx:Script>
 		<![CDATA[
@@ -13,8 +14,8 @@
 			
 			import mx.events.FlexEvent;
 			
-			private var nextTO:uint;
 			private var lastMov:MovieClip;
+			private var ns:NetStream;
 			
 			protected function group1_stateChangeCompleteHandler(event:FlexEvent):void
 			{
@@ -28,11 +29,24 @@
 						{
 							lastMov.removeEventListener("stopped",onMovieStop,false);
 							lastMov = null;
-						}
-						setTimeout(run,500);
-						
+						}												
 						RecursiveStop(swfPlayer.content as MovieClip);
-						lessonChooser.currentState = this.currentState;
+						lessonChooser.currentState = this.currentState;				
+						break;
+				}
+				switch(currentState)
+				{
+					case "ecuador_sun":
+						ns.play("../assets/dance1.flv");						
+						break;
+					case "ecuador_friend":
+						ns.play("../assets/dance2.flv");						
+						break;
+					case "ecuador_power":
+						ns.play("../assets/dance3.flv");						
+						break;
+					case "ecuador_happy":
+						ns.play("../assets/dance4.flv");						
 						break;
 				}
 				
@@ -53,7 +67,6 @@
 				}
 				var transform:SoundTransform = new SoundTransform(0);
 				mc.soundTransform = transform;
-				//mc.stop();
 			}
 			protected function run():void
 			{
@@ -75,45 +88,61 @@
 			protected function ecuadoriconsun1_clickHandler(event:MouseEvent):void
 			{
 				currentState = "ecuador_sun";
-				//showNextTO();
 			}
 			
 			protected function ecuadoriconhappy1_clickHandler(event:MouseEvent):void
 			{
 				currentState = "ecuador_happy";
-				//showNextTO();
 			}
 			
 			protected function ecuadoriconpower1_clickHandler(event:MouseEvent):void
 			{
 				currentState = "ecuador_power";
-				//showNextTO();
 			}
 			
 			protected function ecuadoriconfriend1_clickHandler(event:MouseEvent):void
 			{
 				currentState = "ecuador_friend";
-				//showNextTO();
 			}
 			
 			protected function lessonChooser_stateChangeCompleteHandler(event:FlexEvent):void
 			{
 				this.currentState = event.target.currentState;
-				//clearTimeout(nextTO);
-				//showNextTO();
+				
 			}
 			
 			protected function group1_addedToStageHandler(event:Event):void
 			{
 				currentState = "ecuador_start";
+				trace("vvvvvvv",danceVideo);
+				setupVideo(danceVideo);
+										
 			}
-			/*private function showNextTO():void {
-				clearTimeout(nextTO);
-				nextTO = setTimeout(showNext, 21000);
+			
+			private function setupVideo(vid:VideoPlace) {
+				vid.videoObject = new Video(1920,1080);
+				var nc:NetConnection = new NetConnection(); 
+				nc.connect(null); 
+				ns = new NetStream(nc); 
+				ns.client = {onMetaData:ns_onMetaData, NetStatusEvent:ns_onPlayStatus}; 
+				ns.addEventListener(NetStatusEvent.NET_STATUS, ns_onPlayStatus);
+				vid.videoObject.attachNetStream(ns);
 			}
-			private function showNext():void {				
-				currentState = "ecuador_next";
-			}*/
+			
+			protected function ns_onPlayStatus(event:NetStatusEvent):void 
+			{ 	
+				if (event.info.code == "NetStream.Play.Stop") 
+				{ 
+					run();	 
+				}
+				
+			}
+			protected function ns_onMetaData(item:Object):void 
+			{ 
+				danceVideo.width = item.width;
+				danceVideo.height = item.height;				
+			} 
+			
 			
 		]]>
 	</fx:Script>
@@ -131,6 +160,7 @@
 
 	<s:Image x="0" y="0" source="@Embed('../assets/Ecuador/bg.jpg')"
 			 styleName="headerSmaller"/>
+	<ns1:VideoPlace id="danceVideo" height="1080" horizontalCenter="0" rotation="90" verticalCenter="400"/>
 	<s:Scroller width="1080" height="1920" mouseEnabled="false" verticalScrollPolicy="off" horizontalScrollPolicy="off">
 		<s:Group mouseEnabled="false">
 			<s:SWFLoader mouseEnabled="false" id="swfPlayer" excludeFrom="ecuador_next" alpha.ecuador_start="0" y="960" width="1080" height="1920" x="540"
@@ -138,7 +168,6 @@
 			<s:TextArea selectable="false" mouseEnabled="false" borderVisible="false" contentBackgroundAlpha="0.0" editable="false" includeIn="ecuador_next" x="8" y="466" styleName="metrText"
 					 text="Поэтому в Эквадоре&#xd;самые вкусные&#xd;и полезные бананы&#xd;на свете"/>
 		</s:Group>
-		
 	</s:Scroller>
 	<s:TextArea selectable="false" mouseEnabled="false" borderVisible="false" contentBackgroundAlpha="0.0" editable="false" includeIn="ecuador_friend,ecuador_happy,ecuador_power,ecuador_sun" x="18" y="511"
 			 width="1044" height="202" color="#FFFFFF" styleName="headerBig" text="Солнце"
