--- a/src/GalapagoshaTestScr.mxml
+++ b/src/GalapagoshaTestScr.mxml
@@ -22,6 +22,7 @@
 		<s:State name="ninja"/>
 		<s:State name="weight"/>
 		<s:State name="terms"/>
+		<s:State name="semiMenu"/>
 	</s:states>
 	<fx:Script>
 		<![CDATA[
@@ -69,6 +70,7 @@
 			private var lastTimeActive:Date = new Date(); 
 			
 			private var production:Boolean = false;
+			private var switchToStateName:String = "";
 			
 			
 			private function onSoundChannelSoundComplete(e:Event):void
@@ -150,6 +152,10 @@
 				
 					trace(path);
 					ns.play(path);
+					if(switchToStateName.length > 0)
+					{
+						currentState = switchToStateName;
+					}
 				}
 				
 			}
@@ -174,24 +180,43 @@
 			
 			protected function equadorBtn_clickHandler(event:MouseEvent):void
 			{
-				currentState = "ecuador";
+				switchToState("ecuador");
 			}
 			
 			protected function bananaWeightBtn_clickHandler(event:MouseEvent):void
 			{
-				currentState = "weight";
+				switchToState("weight");
 			}
 			
 			protected function bananaNinjaBtn_clickHandler(event:MouseEvent):void
 			{
-				currentState = "ninja";
+				switchToState("ninja");
 			}
 			
 			protected function bananaRecipeBtn_clickHandler(event:MouseEvent):void
 			{
-				currentState = "recipe";
+				switchToState("recipe");
 			}
-			
+			protected function switchToState(stateName:String):void
+			{
+				currentState = "semiMenu";
+				switch(stateName)
+				{
+					case "ecuador":
+						ns.play("../assets/dance1.flv");						
+						break;
+					case "weight":
+						ns.play("../assets/dance2.flv");						
+						break;
+					case "ninja":
+						ns.play("../assets/dance3.flv");						
+						break;
+					case "recipe":
+						ns.play("../assets/dance4.flv");						
+						break;
+				}
+				switchToStateName = stateName;
+			}
 			protected function bananaTermsBtn_clickHandler(event:MouseEvent):void
 			{
 				currentState = "terms";
@@ -256,6 +281,17 @@
 				{
 					switch(currentState)
 					{
+						case "semiMenu":
+							
+							bananaWeightBtn.alpha = 1;
+							equadorBtn.alpha = 1;
+							bananaRecipeBtn.alpha = 1;
+							bananaNinja.alpha = 1;
+							TweenLite.to(bananaWeightBtn,0.5,{alpha:0});
+							TweenLite.to(equadorBtn,0.5,{alpha:0});
+							TweenLite.to(bananaRecipeBtn,0.5,{alpha:0});
+							TweenLite.to(bananaNinja,0.5,{alpha:0});
+							break;
 						case "menu":
 							if(musicStopped)
 							{
@@ -414,20 +450,22 @@
 		</s:Transition-->
 	</fx:Declarations>
 	<s:Group width="1080" height="1920">
-		<s:Image id="background" includeIn="beckon,greeting,menu,terms" width="1080" horizontalCenter="0" smooth="true"
+		<s:Image id="background" includeIn="beckon,greeting,menu,semiMenu,terms" width="1080" horizontalCenter="0" smooth="true"
 				 source="@Embed('../assets/background.png')" verticalCenter="200"
 				 />
-		<ns1:Clouds2 id="clouds" includeIn="beckon,greeting,menu,terms" width="1100"
+		<ns1:Clouds2 id="clouds" includeIn="beckon,greeting,menu,semiMenu,terms" width="1100"
 					 horizontalCenter="0" verticalCenter="-220"
 					 width.menu="1080"
+					 width.semiMenu="1080"
 					 width.terms="1080"/>
-		<s:Scroller includeIn="beckon,greeting,menu,terms" width="1080"
+		<s:Scroller includeIn="beckon,greeting,menu,semiMenu,terms" width="1080"
 					height="1920">
 			<s:Group left="0" right="0" top="0" bottom="0">
 				<ns1:VideoPlace id="beckonVideo" horizontalCenter="0" rotation="90"
 								verticalCenter="-100"
 								height.greeting="1080"
 								height.menu="1080"
+								height.semiMenu="1080"
 								height.terms="1080"/>
 				<ns1:TouchIT id="clickMe" includeIn="greeting" horizontalCenter="0"
 							 verticalCenter="660"/>				
@@ -436,7 +474,7 @@
 						 text="Прикоснись &#xd;и выиграй путешествие&#xd;в Эквадор!"/>
 			</s:Group>
 		</s:Scroller>
-		<s:Group includeIn="menu,terms" left="0" right="0" top="0" bottom="0">
+		<s:Group includeIn="menu,semiMenu,terms" left="0" right="0" top="0" bottom="0">
 	
 			<s:Group id="bananaWeightBtn" width="250" height="366"
 					 click="bananaWeightBtn_clickHandler(event)" horizontalCenter="-374"
@@ -456,7 +494,8 @@
 							text="Путешествие&#xd;в Эквадор"/>
 				<s:Image x="17" y="11" width="244" height="219" smooth="true"
 						 source="@Embed('../assets/equador.png')"
-						 x.menu="6" y.menu="11"/>
+						 x.menu="6" y.menu="11"
+						 x.semiMenu="6" y.semiMenu="11"/>
 			</s:Group>
 			<s:Group id="bananaRecipeBtn" width="250" height="350"
 					 click="bananaRecipeBtn_clickHandler(event)" horizontalCenter="125"
@@ -467,7 +506,8 @@
 							text="Банановые&#xd;рецепты"/>
 				<s:Image x="16" y="20" width="244" height="203" smooth="true"
 						 source="@Embed('../assets/recipesBtn.png')"
-						 x.menu="25" y.menu="13"/>
+						 x.menu="25" y.menu="13"
+						 x.semiMenu="25" y.semiMenu="13"/>
 			</s:Group>
 			<s:Group id="bananaNinja" width="250" height="356"
 					 click="bananaNinjaBtn_clickHandler(event)" fontSize="50" horizontalCenter="375"
@@ -479,7 +519,7 @@
 				<s:Image x="24" y="66" width="221" height="184" smooth="true"
 						 source="@Embed('../assets/ninjaBtn.png')"/>
 			</s:Group>
-			<s:Group width="500" height="100" horizontalCenter="0" verticalCenter="850" click="bananaTermsBtn_clickHandler(event)">			
+			<s:Group width="500" height="100" horizontalCenter="0" verticalCenter="850" click="bananaTermsBtn_clickHandler(event)" includeIn="menu">			
 			<s:Label horizontalCenter="0" styleName="headerSmall" text="Правила акции"
 					 textDecoration="underline" verticalCenter="0"/>
 			</s:Group>
@@ -506,6 +546,6 @@
 		<ns1:Recipe includeIn="recipe" left="0" top="0" bottom="0" right="0"/>
 		<ns1:VesRostComp includeIn="weight" left="0" top="0" bottom="0" right="0"/>
 		<ns1:Ecuador includeIn="ecuador" left="0" top="0" bottom="0" right="0"/>
-		<ns1:IconButton skinClass="BtnIconSkin2" click="button1_clickHandler(event)" horizontalCenter="0" bottom="20" icon="{imgBack}" excludeFrom="beckon,menu,greeting"/>
+		<ns1:IconButton skinClass="BtnIconSkin2" click="button1_clickHandler(event)" horizontalCenter="0" bottom="20" icon="{imgBack}" excludeFrom="beckon,menu,greeting,semiMenu"/>
 	</s:Group>
 </s:WindowedApplication>
